--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>AdminShop</artifactId>
-        <groupId>com.github.MandelV</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+<modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Plugins</artifactId>
-
+<groupId>com.github.MandelV</groupId>
+<artifactId>AdminShop</artifactId>
+<packaging>pom</packaging>
+<version>1.0-SNAPSHOT</version>
+<modules>
+    <module>Plugins</module>
+</modules>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -69,4 +69,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 </project>
