--- a/Plugins/src/main/resources/message.yml
+++ b/Plugins/src/main/resources/message.yml
@@ -1,49 +1,1 @@
-prefix: "&f[ &6GRADE &f] "
-grade_claim: "&2Vous êtes maintenant : {GRADE}!"
-grade_remove: "&cGrade supprimé."
-player_has_sub: "&4Vous avez déjà un abonnement."
-player_has_no_sub: "&4Vous n'avez pas d'abonnement."
-grade_remove_by_staff: "&cVotre abonnement vous a été retiré."
-permission_deny: "&4Vous n'avez pas accès à cette commande."
-
-plugin_reload_success: "&areload fait."
-
-
-
-
-
-#ERROR MESSAGE
-grade_does_not_exist: "&4Ce grade n'existe pas."
-no_website_account: "&4Vous n'avez pas de compte sur le siteweb"
-player_no_required_money: "&4Vous n'avez pas l'argent requis."
-plugin_reload_failure: "&4erreur reload."
-error_not_console_cmd: "&4Vous ne pouvez pas executer cette commande dans la console."
-
-
-#STAFF
-grade_remove_staff: "&cVous avez supprimé l'abonnement de {PSEUDO}"
-grade_add_by_staff: "&2Vous avez mis {PSEUDO} en : {GRADE}"
-staff_player_has_sub: "&4Ce joueur a déjà un abonnement."
-staff_player_has_no_sub: "&4Ce joueur n'a pas d'abonnement."
-staff_player_has_no_account: "&4Ce joueur n'a pas de compte sur le site."
-
-help:
-  - "&f- &e/grade buy <marquis | duc> &f: &2Permet d'acheter un grade."
-  - "&f- &e/grade remove &f: &2Retirer son grade."
-  - "&f- &e/grade info &f: &2Avoir des informations sur votre abonnement."
-  - "&f- &e/grade about &f: &2Avoir des informations sur le plugins."
-
-help_modo:
-  - "&f- &e/grade add <pseudo> <marquis | duc> &f: &2Permet de mettre un abonnement à un joueur."
-  - "&f- &e/grade remove <pseudo> &f: &2Retirer l'abonnement d'un joueur."
-
-help_admin:
-  - "&f- &e/gradeadmin reload &f: &2Permet de reload le plugin."
-
-gradeInfo:
-  - "&e========== &4Abonnement &e=========="
-  - "&f- &2Abonnement &f: &6{GRADE}"
-  - "&f- &2Début &f: &6{DATE_DEBUT}"
-  - "&f- &2Fin &f: &6{DATE_FIN}"
-  - "&f- &2Jours Restant &f: &6{JOURS}"
-  - "&e==============================="
+prefix: "&f[ &6AdminShop &f] "
