--- a/Plugins/pom.xml
+++ b/Plugins/pom.xml
@@ -33,6 +33,16 @@
                 <scope>system</scope>
                 <systemPath>${project.basedir}/../dependancy/Vault.jar</systemPath>
             </dependency>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.12.2-R0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.12.2-R0.1-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
