--- a/Plugins/pom.xml
+++ b/Plugins/pom.xml
@@ -26,6 +26,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.MandelV</groupId>
+            <artifactId>Dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
             <dependency>
                 <groupId>net.milkbowl.vault</groupId>
                 <artifactId>Vault</artifactId>
