--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>Plugins</module>
+        <module>Dao</module>
     </modules>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
