Use Inventory To display element and use page property instead of Inventory

--- a/Plugins/pom.xml
+++ b/Plugins/pom.xml
@@ -19,6 +19,12 @@
     </repositories>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>craftbukkit</artifactId>
+            <version>1.12-R0.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
@@ -39,17 +45,6 @@
                 <scope>system</scope>
                 <systemPath>${project.basedir}/../dependancy/Vault.jar</systemPath>
             </dependency>
-        <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>1.12.2-R0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>1.12.2-R0.1-SNAPSHOT</version>
-        </dependency>
-
     </dependencies>
 
 
