--- a/Plugins/pom.xml
+++ b/Plugins/pom.xml
@@ -34,6 +34,11 @@
 
         <dependency>
             <groupId>com.github.MandelV</groupId>
+            <artifactId>ChatFormatting</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.MandelV</groupId>
             <artifactId>Dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
