--- a/Plugins/src/main/resources/message.yml
+++ b/Plugins/src/main/resources/message.yml
@@ -2,3 +2,12 @@ prefix: "&f[ &6AdminShop &f] "
 permission_deny: "&4Vous n'avez pas accès à cette commande."
 plugin_reload_success: "&areload fait."
 no_categories: "&4Aucune catégories"
+
+item_lore:
+  - "&cprix achat : {BUY_PRICE}"
+  - "&2prix vente : {SELL_PRICE}"
+  - ""
+  - "&9&lClic gauche &9pour acheter"
+  - "&b&lClic droit &bpour augmenter le nombre"
+  - "&e&lClic molette &epour diminuer le nombre"
+  - "&5&lShift + Clic gauche &5pour augmenter de 10 le nombre"
