add asynchrone access database

--- a/Plugins/src/main/resources/message.yml
+++ b/Plugins/src/main/resources/message.yml
@@ -12,7 +12,8 @@ item_lore:
   - "&cprix achat : {BUY_PRICE}"
   - "&2prix vente : {SELL_PRICE}"
   - ""
-  - "&9&lClic gauche &9pour acheter"
+  - "&c&lClic gauche pour acheter"
+  - "&2&lMAJ + Clic pour vendre"
   - "&b&lClic droit &bpour augmenter le nombre"
   - "&e&lClic molette &epour diminuer le nombre"
-  - "&5&lShift + Clic gauche &5pour augmenter de 10 le nombre"
+  - "&5&lMAJ + Clic Droit &5pour augmenter de 10 le nombre"
