implemente sell raccourcis

--- a/Plugins/src/main/resources/message.yml
+++ b/Plugins/src/main/resources/message.yml
@@ -9,11 +9,12 @@ back_to_categories: "&cRevenir aux catégories"
 back_to_categories_name: "&cRetour"
 
 item_lore:
-  - "&cprix achat : {BUY_PRICE}"
+  - "&4prix achat : {BUY_PRICE}"
   - "&2prix vente : {SELL_PRICE}"
   - ""
-  - "&c&lClic gauche pour acheter"
-  - "&2&lMAJ + Clic pour vendre"
-  - "&b&lClic droit &bpour augmenter le nombre"
-  - "&e&lClic molette &epour diminuer le nombre"
-  - "&5&lMAJ + Clic Droit &5pour augmenter de 10 le nombre"
+  - "&4&lClic gauche &4pour acheter"
+  - "&2&lClic droit &2pour vendre"
+  - ""
+  - "&6&lMAJ+Clic gauche &6pour augmenter de 10"
+  - "&a&lMAJ+Clic droit &6pour augmenter de 1"
+  - "&b&lClic molette &6pour diminuer de 1"
