fix + add remove item when add

--- a/Plugins/src/main/resources/message.yml
+++ b/Plugins/src/main/resources/message.yml
@@ -20,6 +20,6 @@ item_lore:
   - "&4&lClic gauche &4pour acheter"
   - "&2&lClic droit &2pour vendre"
   - ""
-  - "&6&lMAJ+Clic gauche &6pour augmenter de 10"
-  - "&a&lMAJ+Clic droit &6pour augmenter de 1"
-  - "&b&lClic molette &6pour diminuer de 1"
+  - "&6&lMAJ+Clic gauche &6pour augmenter de 16"
+  - "&a&lMAJ+Clic droit &6pour diminuer de 16"
+  - "&b&lClic molette &6pour augmenter de 1"
