implementation edition mode

--- a/Plugins/src/main/resources/plugin.yml
+++ b/Plugins/src/main/resources/plugin.yml
@@ -35,5 +35,9 @@ permission:
     default: false
     description: remove item from categorie
 
+  adminshop.edit:
+    default: false
+    description: allow to edit adminshop
+
 
 
