--- a/Plugins/src/main/resources/plugin.yml
+++ b/Plugins/src/main/resources/plugin.yml
@@ -39,5 +39,9 @@ permission:
     default: false
     description: allow to edit adminshop
 
+  adminshop.reload:
+    default: false
+    description: reload plugin
+
 
 
