--- a/Plugins/src/main/resources/message.yml
+++ b/Plugins/src/main/resources/message.yml
@@ -25,10 +25,13 @@ success_add_categorie: "&aLa catégorie &6{CAT_NAME} &aà bien été ajoutée."
 
 
 
-success_add_item: "&aL'item &6{ITEM} &aà bien été ajouté dans la categorie &5{CAT}&a."
-add_item_buy_error: "&4Le prix d'achat est incorrect."
-add_item_sell_error: "&4Le prix de vente est incorrect."
-success_remove_item: "&aL'item &6{ITEM} &aà bien été supprimé de la categorie &5{CAT}&a."
+success_add_item: "&aL'item &6{ITEM} &aa bien été ajouté dans la catégorie &5{CAT}&a."
+error_add_item: "&4L'item &6{ITEM} &4n'a pas été ajouté dans la catégorie &5{CAT}&4 : "
+add_item_buysell_error: "&4Le prix d'achat/vente est incorrect."
+
+add_item_wrong_statut: "&4Mauvais statut. {sell, buy, both}"
+
+success_remove_item: "&aL'item &6{ITEM} &aa bien été supprimé de la categorie &5{CAT}&a."
 
 error_remove_categorie: " &4Erreur lors de la suppressions de la catégorie &6{CAT_NAME}&4."
 success_remove_categorie: "&aVous avez bien supprimé la catégorie &6{CAT_NAME}&a."
