--- a/Plugins/src/main/resources/message.yml
+++ b/Plugins/src/main/resources/message.yml
@@ -22,8 +22,8 @@ player_has_full_inventory: "&4Votre inventaire est plein."
 error_add_categorie: "&4Erreur lors de l'ajout d'une categorie."
 success_add_categorie: "&aLa catégorie &6{CAT_NAME} &aà bien été ajoutée."
 
-
-
+editor_mode_enable: "&6Mode d'édition &2activé&6."
+editor_mode_disable: "&6Mode d'édition &cdésactivé&6."
 
 success_add_item: "&aL'item &6{ITEM} &aa bien été ajouté dans la catégorie &5{CAT}&a."
 error_add_item: "&4L'item &6{ITEM} &4n'a pas été ajouté dans la catégorie &5{CAT}&4 : "
