add forbidden world

--- a/Plugins/src/main/resources/message.yml
+++ b/Plugins/src/main/resources/message.yml
@@ -1,5 +1,6 @@
 prefix: "&f[ &6AdminShop &f] "
 permission_deny: "&4Vous n'avez pas accès à cette commande."
+forbiddenworld: "&4Vous êtes dans un monde interdit."
 plugin_reload_success: "&areload fait."
 no_categories: "&4Aucun item présent dans cet interface."
 
