--- a/Plugins/pom.xml
+++ b/Plugins/pom.xml
@@ -19,12 +19,6 @@
     </repositories>
 
     <dependencies>
-
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>1.12-R0.1-SNAPSHOT</version>
-        </dependency>
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
@@ -36,11 +30,13 @@
             <groupId>com.github.MandelV</groupId>
             <artifactId>ChatFormatting</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.github.MandelV</groupId>
             <artifactId>Dao</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
             <dependency>
