--- a/Plugins/src/main/resources/config.yml
+++ b/Plugins/src/main/resources/config.yml
@@ -1,6 +1,6 @@
 #=========================================================
 #
-#AdminShop, created by Akitoshi : https://github.com/MandelV
+#AdminShop, created by Akitoshi
 #
 #=========================================================
 
